更新sdk： ios:6.5.0+sea.59d9eb4

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/react-native-component/react-native-smart-amap.git"
   },
+  "dependencies": {
+    "prop-types": "^15.6.2"
+  },
   "keywords": [
     "react-native",
     "smart",
